# scrapy_airbnb

./: README.md  mkdocs.yml  pyproject.toml
airbnbscraper/: scrapy.cfg
airbnbscraper/airbnbscraper/: items.py  middlewares.py  pipelines.py  settings.py
airbnbscraper/airbnbscraper/spiders/: airbnbspider.py
airbnbscraper/data/: resultados.json  resultados_processados.csv  resultados_processados.json
airbnbscraper/tratamento/: __main__.py
docs/: index.md  spider.md
