[tool.poetry]
name = "scrapy-airbnb"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
