[tool.poetry]
name = "scrapy-airbnb"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
scrapy = "^2.11.2"
ipython = "^8.24.0"
selenium = "^4.20.0"
mkdocs = {extras = ["material"], version = "^1.6.0"}
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
